--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "element-plus": "^2.3.6",
+    "firebase": "^9.22.2",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2"
   },
